<resources>
    <string name="app_name">lib_book_common</string>
    <string name="ebook">eBook</string>
    <string name="select">选取</string>
    <string name="cancel">取消</string>
    <string name="tv_read_durprogress">观看至:%s</string>
    <string name="tv_book_name">《%s》</string>
    <string name="tv_searchbook_lastest">最新章节:%s</string>
    <string name="tv_pop_checkaddshelf">是否将《%s》放入书架？</string>
    <string name="tv_importbook_count">共%d个Text文件</string>
    <string name="iv_return">返回</string>
    <string name="scan">智能扫描</string>
    <string name="add_book">添加书籍</string>
    <string name="local_file">本地文件</string>
    <string name="back">返回</string>
    <string name="chapter_number">%d</string>
    <string name="read_progress">6/18</string>
    <string name="confirm">确定</string>
    <string name="take_picture">拍照</string>
    <string name="select_from_album">从手机相册选择</string>
    <string name="offline_chapter">离线章节</string>
    <string name="the">第</string>
    <string name="chapter_to_the">章 至 第</string>
    <string name="chapter">章</string>
    <string name="download">下载</string>
    <string name="is_add_xxx_to_bookshelf">是否将《xxx》放入书架？</string>
    <string name="exit_read">退出阅读</string>
    <string name="add_to_bookshelf">放入书架</string>
    <string name="download_cancel">取消下载</string>
    <string name="download_start">开始下载</string>
    <string name="no_task">暂无任务</string>
    <string name="font_size">字号</string>
    <string name="char_">-</string>
    <string name="_18">18</string>
    <string name="plus">+</string>
    <string name="default_size">默认</string>
    <string name="background">背景</string>
    <string name="offline_download">离线下载</string>
    <string name="chapter_comments">本章评论</string>
    <string name="turn_pages_with_the_volume_keys">音量键翻页</string>
    <string name="tap_on_the_sides_to_turn_the_page">点击页面两侧翻下一页</string>
    <string name="luminance">亮度</string>
    <string name="follow_system_settings">跟随系统</string>
    <string name="page_indicator_format">%1$d/%2$d</string>
</resources>
