<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="185dp"
    android:background="@drawable/bg_search"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="10.5dp"
    android:paddingTop="3.5dp"
    android:paddingEnd="10.5dp"
    android:paddingBottom="16.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/offline_chapter"
            android:textColor="@color/tv_btn_black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:text="@string/the"
                android:textColor="@color/tv_btn_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_start"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_edit"
                android:inputType="number"
                android:lines="1"
                android:hint="1"
                android:maxLength="4"
                android:paddingStart="5dp"
                android:paddingTop="4dp"
                android:paddingEnd="5dp"
                android:paddingBottom="4dp"
                android:textColor="@color/tv_btn_black"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/chapter_to_the"
                android:textColor="@color/tv_btn_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_end"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_edit"
                android:inputType="number"
                android:hint="50"
                android:lines="1"
                android:maxLength="4"
                android:paddingStart="5dp"
                android:paddingTop="4dp"
                android:paddingEnd="5dp"
                android:paddingBottom="4dp"
                android:textColor="@color/tv_btn_black"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/chapter"
                android:textColor="@color/tv_btn_black"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c1c1c1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_book_detail_shelf_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#767676"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_book_detail_read_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/download"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>