<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/bg_shadow2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/font_size"
                android:textColor="#adadad"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/fl_smaller"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_pop_font_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/char_"
                    android:textColor="#767676"
                    android:textSize="22sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_dur_textsize"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/_18"
                android:textColor="#767676"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/fl_bigger"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_pop_font_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plus"
                    android:textColor="#767676"
                    android:textSize="22sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_textsize_default"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/default_size"
                android:textColor="@drawable/selector_pop_font_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/background"
                android:textColor="#adadad"
                android:textSize="14sp" />

            <com.ebook.common.view.profilePhoto.CircleImageView
                android:id="@+id/civ_bg_white"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:civ_fill_color="#F3F3F3"
                app:civ_border_color="#00000000"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.ebook.common.view.profilePhoto.CircleImageView
                android:id="@+id/civ_bg_yellow"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:civ_border_color="#00000000"
                app:civ_fill_color="#DCD1BC"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.ebook.common.view.profilePhoto.CircleImageView
                android:id="@+id/civ_bg_green"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:civ_fill_color="#E1F0D9"
                app:civ_border_color="#00000000"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.ebook.common.view.profilePhoto.CircleImageView
                android:id="@+id/civ_bg_black"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:civ_fill_color="#2D2D33"
                app:civ_border_color="#00000000"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="50dp"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>